--- a/SSMP.ExampleAddon.csproj
+++ b/SSMP.ExampleAddon.csproj
@@ -27,9 +27,7 @@
         <PackageReference Include="UnityEngine.Modules" Version="6000.0.50" IncludeAssets="compile"/>
         <!--If you're unable resolve this dependency, check that you're using the nuget v3 package feed instead of v2.-->
         <PackageReference Include="Silksong.GameLibs" Version="*-*" PrivateAssets="all"/>
-        <Reference Include="SSMP">
-            <HintPath>../lib/SSMP.dll</HintPath>
-        </Reference>
+        <PackageReference Include="Silksong.SSMP" PrivateAssets="all"/>
     </ItemGroup>
 
     <Target Name="CopyMod" AfterTargets="PostBuildEvent">
